[package]

name = "cql"
version = "0.0.2"
authors = ["Ignacio Martín <natx.mc@gmail.com>","Álvaro Berruezo <alvaroberruezo@gmail.com>"]

[dependencies.uuid]

git = "https://github.com/rust-lang/uuid.git"

[dependencies.num]

git = "https://github.com/rust-lang/num"

[dependencies.eventual]
git = "https://github.com/carllerche/eventual"


[dependencies]
byteorder = "*"
enum_primitive = "*"



